--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 </head>
 <body>
     <h1>BUSCAMINES</h1>
-    <button id="creaTaula" onclick="inicialitzaJoc()">Inicia el Joc</button>
-    <input type="number" id="row"><input type="number" id="td">
+    <button id="joc" onclick="inicialitzaJoc()">Inicia el Joc</button>
+    <input type="number" id="midaX"><input type="number" id="midaY"><br><br>
+    <label for="nMines">Numero mines:</label>
+    <input type="number" id="nMines" name="nMines"><br><br>
 </body>
 <script src="buscamines.js"></script>
 </html>
