--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 </head>
 <body>
     <h1>BUSCAMINES</h1>
-    <button id="joc" onclick="inicialitzaJoc()">Inicia el Joc</button>
-    <input type="number" id="midaX"><input type="number" id="midaY"><br><br>
-    <label for="nMines">Numero mines:</label>
-    <input type="number" id="nMines" name="nMines"><br><br>
+    <button id="joc" onclick="inicialitzaJoc()">Inicia el Joc</button><br><br>
+    <label for="midaY">Y: </label><input type="number" id="midaY"><label for="midaX"> X: </label><input type="number" id="midaX"><br><br>
+    <label for="nMines">Numero mines: </label><input type="number" id="nMines" name="nMines"><br><br>
 </body>
 <script src="buscamines.js"></script>
 </html>
